--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -517,7 +517,7 @@
                 <label for="address" class="left" >
                   <span translate>Pool address</span>
                 </label>
-                <span ng-hide="ticketPurchaseForm.address.$pristine">
+                <span ng-hide="ticketPurchaseForm.poolAddress.$pristine">
                   <span class="has-error right size-12" ng-show="ticketPurchaseForm.poolAddress.$invalid && _poolAddress">
                     <i class="icon-close-circle size-14"></i>
                     <span class="vm" translate>Not valid</span>
@@ -539,14 +539,30 @@
                   <i class="icon-wallet text-bold size-18"></i>
                 </a>
               </div>
+
+              <div class="row collapse">
+                <label for="poolFee" class="left" >
+                  <span translate>Pool fee</span>
+                </label>
+                <span ng-hide="ticketPurchaseForm.poolFee.$pristine">
+                  <span class="has-error right size-12" ng-show="ticketPurchaseForm.poolFee.$invalid && _poolFee">
+                    <i class="icon-close-circle size-14"></i>
+                    <span class="vm" translate>Not valid</span>
+                  </span>
+                  <small class="right text-primary" ng-show="!ticketPurchaseForm.poolFee.$invalid">
+                    <i class="icon-checkmark-circle size-14"></i>
+                  </small>
+                </span>
+              </div>
+
               <div class="input">
                 <input type="number" id="poolFee" ng-disabled=" home.lockPoolFee" name="poolFee" ng-attr-placeholder="{{'Pool fee percent'|translate}} {{home.unitName}}" ng-model="_poolFee" valid-amount required autocomplete="off" ng-focus="home.formFocus('poolFee')" ng-blur="home.formFocus(false)">
               </div>
             <div class="row">
-              <div class="large-6 medium-6 small-6 columns">
+              <div class="large-6 medium-6 small-6 columns" ng-show="(home.lockPoolAddress || home.lockPoolFee || home.lockTicketAddress)">
                 <a ng-click="home.resetTicketPurchaseForm(ticketPurchaseForm)" class="button expand outline dark-gray round" translate>Cancel</a>
               </div>
-              <div class="large-6 medium-6 small-6 columns">
+              <div class="columns" ng-class="{'small-6 medium-6 large-6':(home.lockPoolAddress || home.lockPoolFee || home.lockTicketAddress)}">
                 <button class="button black round expand" ng-disabled="ticketPurchaseForm.$invalid || index.updating"
                   ng-style="{'background-color':index.backgroundColor}" ng-click="home.ticketForm()" translate>
                   Send
